fix alignment issues

--- a/public/app.css
+++ b/public/app.css
@@ -15,7 +15,8 @@ body { padding-top: 70px; }
 
 .addform {
 padding-top: 100px;
-width: 50%;
+width: 40%;
+text-align:center;
 }
 .signup {
   padding-top: 100px;
